src/snapshots/workbridge__ui__snapshot_tests__cleanup_reason_dialog.snap
---
source: src/ui.rs
expression: "render(&mut app, 80, 24)"
---
  List    Board    Dashboard                                   Tab: switch view
┌ Work Items (0) ───────┐┌ Claude Code ────────────────────────────────────────┐
│                       ││                                                     │
│  No work items.       ││  Welcome to workbridge                              │
│                       ││                                                     │
│  Ctrl+N: quick start  ││  Ctrl+N    - Quick start session                    │
│  Ctrl+B: backlog ticke││  Ctrl+B    - New backlog ticket                     │
│                 ╭ Close Reason ───────────────────────────╮                  │
│                 │                                         │                  │
│                 │ Reason to comment on the PR (optional): │                  │
│                 │                                         │                  │
│                 │ closing - abandoned                     │                  │
│                 │                                         │                  │
│                 │ Enter: Submit   Esc: Cancel             │                  │
│                 │                                         │                  │
│                 ╰─────────────────────────────────────────╯                  │
│                       ││                                                     │
│                       ││                                                     │
│                       ││                                                     │
│                       ││                                                     │
│                       ││                                                     │
│                       ││                                                     │
│                       ││                                                     │
└───────────────────────┘└─────────────────────────────────────────────────────┘
