src/snapshots/workbridge__ui__snapshot_tests__create_dialog_default_view.snap
---
source: src/ui.rs
expression: "render(&app, 80, 24)"
---
  List    Board                                                Tab: switch view
┌ Work Items (0)┌ Create Work Item ────────────────────────────┐───────────────┐
│               │                                              │               │
│  No work items│ Title:                                       │               │
│               │                                              │               │
│  Ctrl+N: quick│                                              │               │
│  Ctrl+B: backl│ Description (optional):                      │               │
│               │  (empty)                                     │               │
│               │                                              │               │
│               │                                              │               │
│               │                                              │               │
│               │ Repos:                                       │               │
│               │  [x] /Volumes/X10/Projects/workbridge        │               │
│               │  [ ] /Volumes/X10/Projects/other-repo        │               │
│               │                                              │               │
│               │ Branch (optional):                           │               │
│               │  (empty)                                     │               │
│               │                                              │               │
│               │                                              │               │
│               │ Enter: Create | Esc: Cancel | Tab: Next fiel │               │
│               │                                              │               │
│               └──────────────────────────────────────────────┘               │
│                       ││                                                     │
└───────────────────────┘└─────────────────────────────────────────────────────┘
