src/snapshots/workbridge__ui__snapshot_tests__create_dialog_with_error.snap
---
source: src/ui.rs
expression: "render(&app, 80, 24)"
---
  List    Board    Dashboard                                   Tab: switch view
┌ Work Items (0) ───────┐┌ Claude Code ────────────────────────────────────────┐
│               ┌ Create Work Item ────────────────────────────┐               │
│  No work items│                                              │               │
│               │ Title:                                       │               │
│  Ctrl+N: quick│                                              │               │
│  Ctrl+B: backl│                                              │               │
│               │ Description (optional):                      │               │
│               │  (empty)                                     │               │
│               │                                              │               │
│               │                                              │               │
│               │                                              │               │
│               │ Repos:                                       │               │
│               │  [x] /repo/only                              │               │
│               │                                              │               │
│               │ Branch (optional):                           │               │
│               │  (empty)                                     │               │
│               │                                              │               │
│               │ Title cannot be empty                        │               │
│               │ Enter: Create | Esc: Cancel | Tab: Next fiel │               │
│               │                                              │               │
│               └──────────────────────────────────────────────┘               │
│                       ││                                                     │
└───────────────────────┘└─────────────────────────────────────────────────────┘
