src/snapshots/workbridge__ui__snapshot_tests__create_dialog_with_input_and_repos_focused.snap
---
source: src/ui.rs
expression: "render(&app, 80, 24)"
---
┌ Work Items ───────────┐┌ Claude Code ────────────────────────────────────────┐
│                       ││                                                     │
│  No work items.       ││  Welcome to workbridge                              │
│               ┌ Create Work Item ────────────────────────────┐               │
│  Press Ctrl+N │                                              │               │
│  to create one│ Title:                                       │               │
│               │  My feature                                  │               │
│               │                                              │               │
│               │ Repos:                                       │               │
│               │    [ ] /repo/alpha                           │               │
│               │ >  [x] /repo/beta                            │               │
│               │    [ ] /repo/gamma                           │               │
│               │                                              │               │
│               │ Branch (optional):                           │               │
│               │  (empty)                                     │               │
│               │                                              │               │
│               │                                              │               │
│               │ Enter: Create | Esc: Cancel | Tab: Next fiel │               │
│               │                                              │               │
│               └──────────────────────────────────────────────┘               │
│                       ││                                                     │
│                       ││                                                     │
│                       ││                                                     │
└───────────────────────┘└─────────────────────────────────────────────────────┘
