src/snapshots/workbridge__ui__snapshot_tests__empty_app_default_view.snap
---
source: src/ui.rs
assertion_line: 335
expression: "render(&app, 80, 24)"
---
┌ Tabs ────────────┐┌ Claude Code ─────────────────────────────────────────────┐
│                  ││                                                          │
│  No tabs.        ││  Welcome to workbridge                                   │
│                  ││                                                          │
│  Press Ctrl+N    ││  Ctrl+N    - Create a new tab                            │
│  to create one.  ││  Up/Down   - Navigate tabs                               │
│                  ││  Enter     - Focus right panel                           │
│                  ││  Ctrl+]    - Return to tab list                          │
│                  ││  Ctrl+D    - Delete selected tab                         │
│                  ││  ?         - Settings                                    │
│                  ││  Q/Ctrl+Q  - Quit                                        │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
└──────────────────┘└──────────────────────────────────────────────────────────┘
