src/snapshots/workbridge__ui__snapshot_tests__empty_app_with_status_message.snap
---
source: src/ui.rs
expression: "render(&app, 80, 24)"
---
┌ Work Items (0) ───────┐┌ Claude Code ────────────────────────────────────────┐
│                       ││                                                     │
│  No work items.       ││  Welcome to workbridge                              │
│                       ││                                                     │
│  Press Ctrl+N         ││  Ctrl+N    - Create work item                       │
│  to create one.       ││  Up/Down   - Navigate items                         │
│                       ││  Enter     - Open session / Import                  │
│                       ││  Ctrl+]    - Return to item list                    │
│                       ││  Ctrl+G    - Global assistant                       │
│                       ││  Ctrl+D    - Delete work item                       │
│                       ││  ?         - Settings                               │
│                       ││  Q/Ctrl+Q  - Quit                                   │
│                       ││                                                     │
│                       ││                                                     │
│                       ││                                                     │
│                       ││                                                     │
│                       ││                                                     │
│                       ││                                                     │
│                       ││                                                     │
│                       ││                                                     │
│                       ││                                                     │
│                       ││                                                     │
└───────────────────────┘└─────────────────────────────────────────────────────┘
Press Ctrl+N to create a work item
