src/snapshots/workbridge__ui__snapshot_tests__multiple_tabs_second_selected.snap
---
source: src/ui.rs
expression: "render(&app, 80, 24)"
---
┌ Tabs ────────────┐┌ Claude Code ─────────────────────────────────────────────┐
│   Tab 0          ││█                                                         │
│>  Tab 1          ││                                                          │
│   Tab 2          ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
└──────────────────┘└──────────────────────────────────────────────────────────┘
